--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 60vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
 }
 
-.App-link {
-  color: #61dafb;
+.root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.todo-list, .root {
+  background-color: floralwhite;;
+  border-style: outset;
+  padding: 1rem;
+}
+
+.todo-list fieldset {
+  border-style: none;
+}
+
+.todo-list li { text-align: left;}
+.todo-list ul { list-style: none;}
+.todo-list header {
+  font-weight: bold;
+}
+
+.todo.todo--done {
+  text-decoration: line-through
+}
+
+#new-todo {
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+footer {
+  font-size: small;
+  margin: 0 1rem;
+}
+
+@media(min-width: 600px){
+  .App {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 3rem;
   }
-  to {
-    transform: rotate(360deg);
+  .todo-list, .root {
+    max-width: 30rem;
+    min-width: 30rem;
+    min-height: 10rem;
   }
 }
