--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,9 @@
   justify-content: space-between;
 }
 
-.todo-list, .root {
-  background-color: floralwhite;;
+.todo-list,
+.root {
+  background-color: floralwhite;
   border-style: outset;
   padding: 1rem;
 }
@@ -21,14 +22,18 @@
   border-style: none;
 }
 
-.todo-list li { text-align: left;}
-.todo-list ul { list-style: none;}
+.todo-list li {
+  text-align: left;
+}
+.todo-list ul {
+  list-style: none;
+}
 .todo-list header {
   font-weight: bold;
 }
 
 .todo.todo--done {
-  text-decoration: line-through
+  text-decoration: line-through;
 }
 
 #new-todo {
@@ -41,7 +46,7 @@ footer {
   margin: 0 1rem;
 }
 
-@media(min-width: 600px){
+@media (min-width: 600px) {
   .App {
     text-align: center;
     display: flex;
@@ -49,7 +54,8 @@ footer {
     justify-content: space-evenly;
     margin: 3rem;
   }
-  .todo-list, .root {
+  .todo-list,
+  .root {
     max-width: 30rem;
     min-width: 30rem;
     min-height: 10rem;
